1.19 updates